@@ -13,6 +13,7 @@ server:
 	msg-cache-size: 4m
 	rrset-cache-size: 4m
 	minimal-responses: yes
+	trust-anchor: "always.empty.    3600    IN      DS       50602 8 2 FA8EE175C47325F4BD46D8A4083C3EBEB11C977D689069F2B41F1A29 B22446B1"  # This is nonsense, just to kick the validator
 view:
 	name: testview
 	view-first: yes  # Allow falling back to global local data
