@@ -1,5 +1,4 @@
 ; nameserver test file
-$ORIGIN example.com.
 $TTL 3600
 
 ENTRY_BEGIN
@@ -7,9 +6,9 @@ MATCH opcode qtype qname
 REPLY QR AA NOERROR
 ADJUST copy_id
 SECTION QUESTION
-www	IN	A
+www.example.com.	IN	A
 SECTION ANSWER
-www	IN	A	10.20.30.40
+www.example.com.	IN	A	10.20.30.40
 ENTRY_END
 
 ENTRY_BEGIN
@@ -18,4 +17,20 @@ REPLY QR AA SERVFAIL
 ADJUST copy_id
 SECTION QUESTION
 www.example.net.	IN	A
+ENTRY_END
+
+ENTRY_BEGIN
+MATCH opcode qtype qname
+REPLY QR AA NOERROR
+ADJUST copy_id
+SECTION QUESTION
+always.empty.	IN	A
+ENTRY_END
+
+ENTRY_BEGIN
+MATCH opcode qtype qname
+REPLY QR AA NOERROR
+ADJUST copy_id
+SECTION QUESTION
+always.empty.	IN	DNSKEY
 ENTRY_END
